# mcp-ui-bridge

./: .gitignore  Pipfile  README.md  package.json  test.db
.cursor/: mcp.json
backend/: Pipfile  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/models/: todo.py
backend/app/api/routers/: main_api_router.py  todos.py
backend/app/api/services/: todo_crud_service.py
frontend/: package.json  tsconfig.node.json
frontend/scripts/: launch-mcp.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: todoApi.ts
frontend/src/components/: AttributeTest.tsx  Navbar.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/hooks/: useTodos.ts
frontend/src/pages/: ScrollPaginationTestPage.tsx  TestFeaturesPage.tsx  TodoPage.tsx  UserProfilePage.tsx
mcp-external-server/: package.json  tsconfig.json
mcp-external-server-python/: README.md  pyproject.toml
mcp-external-server-python/src/: main.py
mcp-external-server/src/: index.ts
mcp-ui-bridge-python/: .gitignore  PLAN.md  PUBLISHING_GUIDE.md  README.md  pyproject.toml
mcp-ui-bridge-python/mcp_ui_bridge_python/: main.py  mcp_server.py
mcp-ui-bridge-python/mcp_ui_bridge_python/core/: dom_parser.py  playwright_controller.py
mcp-ui-bridge-python/mcp_ui_bridge_python/models/: actions.py  attributes.py  elements.py  enums.py  server_options.py
react-cli-mcp/: .gitignore  PLAN.md  README.md  package.json  tsconfig.json
react-cli-mcp/src/: main.ts  mcp_server.ts
react-cli-mcp/src/core/: dom-parser.ts  playwright-controller.ts  types.ts
react-cli-mcp/src/types/: attributes.ts  index.ts
